modal button changed

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <p><h3>Total sum: </h3></p>
 <input class="total">
 <span>grn.</span>
-<button class="modal-btn2"> Payment</button></div>
+<button type="button" class="modal-btn2 btn btn-primary"> Payment</button></div>
 <div class="modal-bg">
 	<div class="modal  h-80 w-30 justify-items-center">
 		<div class="col-lg-9 col-md-10 col-10">
